loads of changes

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
     "http": "^0.0.1-security",
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
@@ -38,11 +40,12 @@
     "path": "^0.12.7",
     "querystring": "^0.2.1",
     "raw-body": "^2.5.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-highcharts": "^16.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
